fix spacing between socials

--- a/style.css
+++ b/style.css
@@ -157,15 +157,21 @@ p {
 
 .contact-info-list {
     list-style-type: none;
-    margin: 0;
+    margin: 0px;
     padding: 0;
+    display: block;
+
 }
+
+.contact-info-list p {
+    margin: 0px;
+}
+
 
 
 .social-logo {
     width: 40px;
     height: 40px;
-    display: block;
     transition: transform .5s ease;
 }
 
